Changed gitignore \ to /

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-RecipeFinderDatabase\RecipeFinderDatabase\obj\
-RecipeFinderDatabase\RecipeFinderDatabase\bin\
+RecipeFinderDatabase/RecipeFinderDatabase/obj/
+RecipeFinderDatabase/RecipeFinderDatabase/bin/
