--- a/RecipeFinder/app/src/main/AndroidManifest.xml
+++ b/RecipeFinder/app/src/main/AndroidManifest.xml
@@ -6,9 +6,12 @@
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name="com.wykon.recipefinder.activity.RecipeListActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:icon="@drawable/app_icon"
             android:label="Recepten" >
             <intent-filter>
@@ -19,31 +22,43 @@
         </activity>
         <activity
             android:name="com.wykon.recipefinder.activity.RecipeActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:icon="@drawable/app_icon"
             android:label="Recept" >
         </activity>
         <activity
             android:name="com.wykon.recipefinder.activity.FavoriteListActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:icon="@drawable/app_icon"
             android:label="Favorieten" >
         </activity>
         <activity
             android:name="com.wykon.recipefinder.activity.HiddenRecipeList"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:icon="@drawable/app_icon"
             android:label="Verborgen" >
         </activity>
         <activity
             android:name="com.wykon.recipefinder.activity.SearchActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:icon="@drawable/app_icon"
             android:label="Zoeken" >
         </activity>
         <activity
             android:name="com.wykon.recipefinder.activity.ResultListActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:icon="@drawable/app_icon"
             android:label="Resultaten" >
         </activity>
         <activity
             android:name="com.wykon.recipefinder.activity.RandomActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:icon="@drawable/app_icon"
             android:label="Willekeurig" >
         </activity>
